...
data class RecurringExpense(val description: String, val value: String, val billingDay: String)

object RecurringExpensesDestination : NavigationDestination {
    override val route = "recurring_expenses"
}

const val NEW_RECURRING_EXPENSE_DIALOG_TAG = "new_recurring_expense_dialog"

@Composable
fun RecurringExpenses(modifier: Modifier = Modifier) {
    val recurringExpenses = listOf(
        RecurringExpense(
            description = "Aluguel",
...
