...
import br.com.rbrthmn.ui.R as commonR

object ReservesDestination : NavigationDestination {
    override val route = "reserves"
}

const val NEW_RESERVE_DIALOG_TAG = "new_reserve_dialog"

@Composable
fun ReservesScreen(
    modifier: Modifier = Modifier,
    viewModel: ReservesContract.ViewModel = koinViewModel<ReservesContract.ViewModel>()
) {
...
